import java.math.BigDecimal
plugins {
    java
    application
    id("org.springframework.boot") version "3.3.5"
    id("io.spring.dependency-management") version "1.1.6"
    id("info.solidsoft.pitest") version "1.15.0"
    id("jacoco")
}

group = "com.example"
version = "1.0.0"

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
}

configurations {
    compileOnly {
        extendsFrom(configurations.annotationProcessor.get())
    }
    all {
        exclude(group = "org.springframework.boot", module = "spring-boot-starter-web")
        exclude(group = "org.springframework", module = "spring-webmvc")
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // Spring Boot - WebFlux only (excluyendo MVC)
    implementation(platform(org.springframework.boot.gradle.plugin.SpringBootPlugin.BOM_COORDINATES))
    implementation("org.springframework.boot:spring-boot-starter-webflux")
    implementation("org.springframework.boot:spring-boot-starter-validation") {
        exclude(group = "org.springframework.boot", module = "spring-boot-starter-web")
    }
    implementation("org.springframework.boot:spring-boot-starter-actuator")

    // Reactive
    implementation("io.projectreactor:reactor-core")

    // Lombok
    compileOnly("org.projectlombok:lombok:1.18.32")
    annotationProcessor("org.projectlombok:lombok:1.18.32")

    // FIX #6: MapStruct removed - not used in current implementation
    // If needed in future, add: implementation("org.mapstruct:mapstruct:1.5.5.Final")

    // Logging
    implementation("org.slf4j:slf4j-api")
    implementation("ch.qos.logback:logback-classic")

    // SOAP (solo JAXB, sin Spring Web Services que trae MVC)
    implementation("jakarta.xml.bind:jakarta.xml.bind-api:4.0.1")
    runtimeOnly("org.glassfish.jaxb:jaxb-runtime:4.0.4")

    // AWS S3
    implementation("software.amazon.awssdk:s3:2.28.29")
    implementation("software.amazon.awssdk:netty-nio-client:2.28.29")

    // Monitoring & Tracing
    implementation("io.micrometer:micrometer-core")
    implementation("io.micrometer:micrometer-tracing-bridge-brave")
    implementation("io.micrometer:micrometer-registry-prometheus")

    // Testing
    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("io.projectreactor:reactor-test")
    testImplementation("org.junit.jupiter:junit-jupiter")
    testImplementation("org.mockito:mockito-junit-jupiter")
    testImplementation("org.mockito:mockito-core")
    testImplementation("com.squareup.okhttp3:mockwebserver:4.12.0")
    testImplementation("com.squareup.okhttp3:okhttp:4.12.0")

    // H2 Database
    runtimeOnly("com.h2database:h2")
    implementation("org.springframework.boot:spring-boot-starter-data-r2dbc")
    implementation("io.r2dbc:r2dbc-h2:1.0.0.RELEASE")

    // JPA for entities
    implementation("jakarta.persistence:jakarta.persistence-api:3.1.0")

    // Reactive Commons - ObjectMapper utility for domain/entity mapping
    implementation("org.reactivecommons.utils:object-mapper-api:0.1.0")
    implementation("org.reactivecommons.utils:object-mapper:0.1.0")
}

tasks.withType<Test> {
    useJUnitPlatform()
    testLogging {
        events("passed", "skipped", "failed")
        showExceptions = true
        showCauses = true
        showStackTraces = true
    }
}

tasks.withType<JavaCompile> {
    options.encoding = "UTF-8"
    options.compilerArgs.addAll(listOf("-parameters", "-Xlint:all", "-Xlint:-processing"))
}

springBoot {
    buildInfo()
}

pitest {
    junit5PluginVersion.set("1.2.1")
    pitestVersion.set("1.15.0")
    targetClasses.set(listOf("com.example.fileprocessor.domain.*", "com.example.fileprocessor.infrastructure.drivenadapters.*", "com.example.fileprocessor.infrastructure.entrypoints.*", "com.example.fileprocessor.infrastructure.helpers.*"))
    targetTests.set(listOf("com.example.fileprocessor.*"))
    outputFormats.set(listOf("HTML", "XML"))
    timestampedReports.set(false)
    mutationThreshold.set(60)
    coverageThreshold.set(80)
    mutators.set(listOf("DEFAULTS", "REMOVE_CONDITIONALS_EQUAL_IF", "REMOVE_CONDITIONALS_ORDER_IF", "REMOVE_INCREMENTS", "INVERT_NEGS", "MATH", "NEGATE_CONDITIONALS", "VOID_METHOD_CALLS", "NON_VOID_METHOD_CALLS"))
    excludedClasses.set(listOf("com.example.fileprocessor.Application", "com.example.fileprocessor.config.*", "com.example.fileprocessor.infrastructure.config.*", "com.example.fileprocessor.mock.*"))
    excludedMethods.set(listOf("toString", "hashCode", "equals", "log.*"))
}

jacoco {
    toolVersion = "0.8.12"
}

tasks.jacocoTestReport {
    dependsOn(tasks.test)
    reports {
        xml.required.set(true)
        html.required.set(true)
        html.outputLocation.set(layout.buildDirectory.dir("reports/jacoco/test"))
    }
}
